AM_CFLAGS = -std=iso9899:1999 -Wall -Wextra -pedantic
pkginclude_HEADERS = md4.h md5.h ripemd128.h ripemd160.h sha0.h sha1.h sha224.h sha256.h sha384.h sha512.h

lib_LTLIBRARIES = libampheck.la

libampheck_la_LDFLAGS = -version-info 0:0:0
libampheck_la_SOURCES = md4.c md5.c ripemd128.c ripemd160.c sha0.c sha1.c sha224.c sha256.c sha384.c sha512.c
